手動タイマー入力機能作成完了

--- a/app/assets/stylesheets/new_learnig_history.css
+++ b/app/assets/stylesheets/new_learnig_history.css
@@ -9,12 +9,10 @@
   display: block;
   background-color: #AAAAAA;
   padding-top: 50px;
-  width: 230px;
-  height: 230px;
+  width: 180px;
+  height: 180px;
   margin: 0 auto;
   border-radius: 50%;
-  -webkit-box-shadow: 0 10px 25px 0 #333333;
-          box-shadow: 0 10px 25px 0 #333333;
 }
 
 .comment_contaner {
@@ -22,13 +20,14 @@
 }
 
 #timerLabel {
-  margin-top: 30px;
+  margin-top: 20px;
   color: white;
   font-size: 20px;
 }
 
 .information_container {
-  padding: 30px 10%;
+  padding: 20px 10%;
+  padding-top: 10px;
 }
 
 .text_container > .form-control {
@@ -61,7 +60,7 @@
   text-align: center;
   background-color: #BBBBBB;
   padding-top: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 10px;
 }
 
 .myButton {
