--- a/app/views/share/_title.html.erb
+++ b/app/views/share/_title.html.erb
@@ -1,4 +1,4 @@
-<div style="padding: 76px 0 0 0;"></div>
+<div id="javascript_margin" style="padding: 76px 0 0 0;"></div>
   <div class="share_title">
     <div>
       <h2><%=each_title%></h2>
