--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -9,14 +9,14 @@
       <% if @current_student.image.present? %>
         <%=image_tag @current_student.image.url , class: "student-profile-img-self" %>
       <% else %>
-        <p>画像が設定されていません</p>
+        <p>画像なし</p>
       <% end %>
         </div>
       <div class="student-profile">
-        <h1><%= @current_student.full_name %></h1>
+        <h2><%= @current_student.full_name %></h2>
       </div>
       <div class="student-profile-subject">
-        <h5>志望校</h5><h2><%= @current_student.school_of_choice %></h2>
+        <h5>志望校</h5><h3><%= @current_student.school_of_choice %></h3>
       </div>
       <%= link_to "ログアウト", "/sessions/destroy", method: :delete, data: { confirm: "本当にログアウトしますか？" }, class: "btn btn-outline-danger" %>
     </div>
@@ -38,7 +38,7 @@
           <% if @current_student.teacher.image.present? %>
             <%=image_tag @current_student.teacher.image.url, class: "your_teacher_img_self" %>
           <% else %>
-            <p>画像が設定されていません</p>
+            <p>画像がなし</p>
           <% end %>
         <% else %>
         <% end %>
