--- a/app/views/news/edit_lh.html.erb
+++ b/app/views/news/edit_lh.html.erb
@@ -1,9 +1,9 @@
 <section class="edit_learning_history">
 
-<%= form_for(@lh, url: 'update', method: :post) do |f| %>
-  <div class="stopwatch_container" style="text-align: center;">
-        <h4 class="stopwatch_title">StopWatch</h4>
-        <input id="" type="time" step="1" value=<%= @lh.learning_time %> style="padding: 5px; font-size: 20px; border-color:#3366FF;">
+<%= form_for(@lh, url: "/news_field/#{@lh.id}/update", method: :post) do |f| %>
+  <div class="stopwatch_container" style="text-align: center; width: 600px;">
+        <h4 class="stopwatch_title">StopWatch</h4>   
+        <%= f.time_select :learning_time, {}, style: "padding: 5px; font-size: 20px; border-color:#3366FF;" %>
   </div>
   <div class="information_container">
       <div class="text_container">
