students/historyにて日付ごとの勉強時間の集計表を作成

--- a/app/assets/stylesheets/student-and-teacher.css
+++ b/app/assets/stylesheets/student-and-teacher.css
@@ -6,6 +6,8 @@
   text-align: center;
   padding: 20px 60px;
   background: white;
+  border-bottom: 1px solid;
+  margin-bottom: 3px;
 }
 
 .student-and-teacher_title h2 {
