--- a/app/assets/stylesheets/title.scss
+++ b/app/assets/stylesheets/title.scss
@@ -3,4 +3,6 @@
   padding: 15px 0px;
   background: white;
   font-family: 'Times New Roman', Times, serif;
+  border-bottom: 1px solid;
+  margin-bottom: 3px;
 }
