--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -63,14 +63,33 @@
           </tr>
         </thead>
         <tbody>
-          <tr valign="middle">
-            <!-- rowspanでセルを縦に結合 -->
-            <!-- つまりrowspanの数は科目数 -->
-              <td rowspan="4" style="font-size: 14px;">第一回全国模試</td>
+            <tr valign="middle">
+              <!-- rowspanでセルを縦に結合 -->
+              <!-- つまりrowspanの数は科目数 -->
+              <td rowspan="3" style="font-size: 14px;">第一回全国模試</td>
               <td style="font-size: 14px;">国語</td>
               <td style="font-size: 14px;">70</td>
               <td style="font-size: 14px;">50</td>
-              <td rowspan="4" style="font-size: 14px;">A</td>
+              <td rowspan="3" style="font-size: 14px;">A</td>
+            </tr>
+            <tr valign="middle">
+              <td style="font-size: 14px;">数学</td>
+              <td style="font-size: 14px;">80</td>
+              <td style="font-size: 14px;">60</td>
+            </tr>
+            <tr valign="middle">
+              <td style="font-size: 14px;">英語</td>
+              <td style="font-size: 14px;">60</td>
+              <td style="font-size: 14px;">50</td>
+            </tr>
+          <tr valign="middle">
+            <!-- rowspanでセルを縦に結合 -->
+            <!-- つまりrowspanの数は科目数 -->
+              <td rowspan="3" style="font-size: 14px;">第一回全国模試</td>
+              <td style="font-size: 14px;">国語</td>
+              <td style="font-size: 14px;">70</td>
+              <td style="font-size: 14px;">50</td>
+              <td rowspan="3" style="font-size: 14px;">A</td>
           </tr>
           <tr valign="middle">
               <td style="font-size: 14px;">数学</td>
