--- a/app/assets/stylesheets/title.css
+++ b/app/assets/stylesheets/title.css
@@ -3,5 +3,7 @@
   padding: 15px 0px;
   background: white;
   font-family: 'Times New Roman', Times, serif;
+  border-bottom: 1px solid;
+  margin-bottom: 3px;
 }
 /*# sourceMappingURL=title.css.map */
