--- a/app/views/students/history.html.erb
+++ b/app/views/students/history.html.erb
@@ -1,7 +1,26 @@
 <%= render partial: 'share/header' %>
 <section class="news_field_background">
 <%= render partial: 'share/title', locals: {each_title: '学習履歴'} %>
+<table class="table" border="2" style="border-collapse: collapse">
+  <thead class="thead-dark">
+    <tr valign="middle">
+      <th scope="col"  style="font-size: 14px;">学習日</th>
+      <th scope="col" width="40%" style="font-size: 14px;">学習時間</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @hd.zip(@history_time_ary) do |hd, ht|%>
+      <tr valign="middle" style="border-bottom: 2px solid;">
+          <th scope="row" style="font-size: 14px;"><%= hd %></th>  
+          <td style="font-size: 14px;"><%= ht %>分</td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <% @histories.sort.reverse.each do |h| %>
+  <div class="stu_card_info_time_ago" style="text-align: right;">
+        <p style="margin-bottom: 5px;"><%= h.created_at.to_s(:datetime_jp) %></p>
+  </div>
   <%= render partial: 'share/student-history', locals: {variable: h} %>
 <% end %>
