--- a/app/views/students/edit.html.erb
+++ b/app/views/students/edit.html.erb
@@ -22,8 +22,8 @@
         <%= f.text_field :school_of_choice, class: "form-control col-8" %>
       </div>
       <div class="form-group row">
-        <%= f.label :school_of_choice, "科目", class: "col-4 label" %>
-        <%= f.text_field :school_of_choice, class: "form-control col-8" %>
+        <%= f.label :subject, "科目", class: "col-4 label" %>
+        <%= f.text_field :subject, class: "form-control col-8" %>
       </div>
       <div class="form-group row">
         <%= f.label :image, "アイコン画像", class: "col-4 label" %>
