--- a/app/views/teachers/history.html.erb
+++ b/app/views/teachers/history.html.erb
@@ -30,7 +30,8 @@
   <% else %>
   <div id="student<%= i %>" class="tab-pane test_score_contaner">
   <% end %>
-    <% s.learning_histories.sort.reverse.each do |h| %>
+  <%= @student_names %>
+    <% s.learning_histories.sort.reverse.each_with_index do |h, index| %>
       <%= render partial: 'share/student-history', locals: {variable: h} %>
     <% end %>
   </div>
