--- a/app/views/share/_student-history.erb
+++ b/app/views/share/_student-history.erb
@@ -2,9 +2,13 @@
   <div class="stu_card_content">
     <div class="stu_card_content_subject">
       <% if variable&.subject %>
-        <p class="stu_card_content_subject_circle"><%= variable.subject[0, 1] %></p>
+        <% if variable.student.subject.present? %>
+          <p class="stu_card_content_subject_circle"><%= variable.student.subject[0, 1] %></p>
+        <% else %>
+          <p class="stu_card_content_subject_circle"><%= variable.subject[0, 1] %></p>
+        <% end %>
       <% else %>
-        <p class="stu_card_content_subject_circle">時間が設定されておりません</p>
+        <p class="stu_card_content_subject_circle">教科が設定されておりません</p>
       <% end %>
     </div>
     <div class="stu_card_content_text">
