--- a/app/assets/stylesheets/teacher_profile.css
+++ b/app/assets/stylesheets/teacher_profile.css
@@ -1,6 +1,7 @@
 .teacher-profile {
   text-align: center;
   margin: 40px 20px;
+  margin-top: 0px;
 }
 
 .teacher-profile-img {
@@ -49,7 +50,7 @@
       grid-template-columns: 80% 20%;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  background-color: #555555;
+  background-color: black;
   padding: 10px 60px;
   color: white;
   font-family: 'arial';
@@ -59,6 +60,7 @@
 }
 
 .your_students_title h4 {
+  text-align: center;
   margin-bottom: 0;
   font-family: serif;
 }
@@ -140,15 +142,14 @@
 }
 
 .tacher-card-wrapper {
-  -webkit-box-shadow: 0 0 8px gray;
-          box-shadow: 0 0 8px gray;
-  margin: 30px 250px;
-  padding: 20px 0;
+  margin: 0;
+  border: none;
 }
 
 @media (min-width: 500px) and (max-width: 1000px) {
   .tacher-card-wrapper {
-    margin: 30px 100px;
+    margin: 0;
+    border: none;
   }
   .teacher_profile_section {
     margin: 0;
