--- a/app/assets/stylesheets/teacher_profile.scss
+++ b/app/assets/stylesheets/teacher_profile.scss
@@ -2,6 +2,7 @@
 .teacher-profile {
   text-align: center;
   margin: 40px 20px;
+  margin-top: 0px;
 }
 
 .teacher-profile-img {
@@ -47,14 +48,15 @@
   display: grid;
   grid-template-columns: 80% 20%;
   justify-content: space-around;
-  background-color: #555555;
-  padding: 10px 60px;;
+  background-color: black;
+  padding: 10px 60px;
   color: white;
   font-family: 'arial';
   align-items: center;
 }
 
 .your_students_title h4 {
+  text-align: center;
   margin-bottom: 0;
   font-family: serif;
 }
@@ -126,14 +128,14 @@
 }
 
 .tacher-card-wrapper {
-  box-shadow: 0 0 8px gray;
-  margin: 30px 250px;
-  padding: 20px 0;
+  margin: 0;
+  border: none;
 }
 
 @media (min-width: 500px) and (max-width: 1000px) {
   .tacher-card-wrapper {
-    margin: 30px 100px;
+    margin: 0;
+    border: none;
   }
   .teacher_profile_section{
     margin: 0;
