--- a/app/views/students/history.html.erb
+++ b/app/views/students/history.html.erb
@@ -1,6 +1,7 @@
 <%= render partial: 'share/header' %>
 <section class="news_field_background">
-<%= render partial: 'share/title', locals: {each_title: '学習履歴'} %>
+<div style="padding: 90px 0 0 0"></div>
+
 <table class="table" border="2" style="border-collapse: collapse">
   <thead class="thead-dark">
     <tr valign="middle">
