--- a/app/views/students/show_test.html.erb
+++ b/app/views/students/show_test.html.erb
@@ -1,6 +1,6 @@
 <%= render partial: 'share/header' %>
 <section class="new_msg_section">
-<%= render partial: 'share/title', locals: {each_title: 'テスト成績推移'} %>
+<div style="padding: 90px 0 0 0"></div>
 
 <div class="test_score_contaner">
   <div class="test_socre_graph_container">
