--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -81,9 +81,15 @@
     </a>
     </div>
   <% else %>
+    <div class="new_question_add">
+      <a href="students/new_questions" class="new_message_add_btn">
+        <i class="far fa-hand-paper question_icon"></i>
+        <!-- <i class="fas fa-question question_icon"></i> -->
+      </a>
+    </div>
     <div class="new_message_add">
     <a href="/new_lh" class="new_message_add_btn">
-    <i class="fas fa-pencil-alt message_icon"></i></i>
+      <i class="fas fa-pencil-alt message_icon"></i>
     </a>
     </div>
   <% end %>
