replyコントローラー作成。先生リプライ表示作成

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -2,6 +2,13 @@
   background: #f5f5f5;
 }
 
+.question_card {
+  margin: 0 200px;
+  padding: 10px 30px;
+  background: white;
+  border-bottom: solid 5px #f5f5f5;
+}
+
 .stu_card {
   margin: 0 200px;
   padding: 10px 30px;
@@ -209,6 +216,10 @@
 
 @media (min-width: 0px) and (max-width: 900px) {
   .stu_card {
+    margin: 0;
+  }
+
+  .question_card {
     margin: 0;
   }
 
