--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -2,6 +2,87 @@
 <div style="padding: 76px 0 0 0"></div>
 
 <section class="news_field_background">
+  <div class="stu_card">
+    <div class="stu_card_info" style="margin-bottom: 20px;">
+      <div class="stu_card_info_img">
+        <p class="stu_card_info_img_self" style="font-size: 14px;">画像<br>なし</p>
+      </div>
+      <div class="stu_card_info_name">
+        <h5>Question君</h5>
+      </div>
+      <div class="stu_card_info_time_ago">
+        <p style="margin-bottom: 5px;">2020年 09月 07日 11時 07分</p>
+      </div>
+    </div>
+      <div class="balloon" style="margin-top: 0px;">
+        <div class="stu_card_content">
+          <div class="stu_card_content_subject">
+              <p class="stu_card_content_subject_circle" style="margin-bottom: 5px">質</p>
+          </div>
+          <div class="stu_card_content_text" style="padding: 0px;padding-left: 5px;">
+            <span style="font-size: 12px;">学習内容について</span>
+            <div style="font-size: 12px;"><ココにPDFリンク貼る></div>
+          </div>
+        </div>
+        <div class="stu_card_comment" style="margin-top: 5px;">
+          <p style="font-size: 12px;margin-bottom: 5px;">添付した資料の三行目が分かりません。そもそも二行目のthatは関係代名詞なのでしょうか。それとも同格のthatなのでしょうか。どうぞよろしくお願いします。</p>
+        </div>
+      </div>
+      <div class="teacher_card" style="border-left:solid 1px;">
+        <div class="teacher_card_info">
+          <div class="teacher_card_info_img">
+            <p class="stu_card_info_img_self" style="font-size: 14px;">画像<br>なし</p>
+          </div>
+          <div class="teacher_card_info_name">
+            <h5>Answer先生</h5>
+          </div>
+          <div class="teacher_card_info_time_ago">
+            <p>2020年 09月 08日 01時 42分</p>
+          </div>
+        </div>
+        <div class="balloon_teacher">
+          <div class="teacher_card_comment">
+            <p style="font-size: 11px;">To: Question君</p>
+            <p>二行目のthatは同格のthatです。ideaの後にくるthatはほぼ100%で同格のthatです。覚えておきましょう。</p>
+          </div>
+        </div>
+        <%= link_to "返信する", "teacher/reply", method: :get, style: "color: tomato;margin" %>
+      </div>
+    </div>
+
+
+  <div class="stu_card">
+    <div class="stu_card_info" style="margin-bottom: 20px;">
+      <div class="stu_card_info_img">
+        <p class="stu_card_info_img_self" style="font-size: 14px;">画像<br>なし</p>
+      </div>
+      <div class="stu_card_info_name">
+        <h5>Question君</h5>
+      </div>
+      <div class="stu_card_info_time_ago">
+        <p style="margin-bottom: 5px;">2020年 09月 07日 11時 07分</p>
+      </div>
+    </div>
+      <div class="balloon" style="margin-top: 0px;">
+        <div class="stu_card_content">
+          <div class="stu_card_content_subject">
+              <p class="stu_card_content_subject_circle" style="margin-bottom: 5px">質</p>
+          </div>
+          <div class="stu_card_content_text" style="padding: 0px;padding-left: 5px;">
+            <span style="font-size: 12px;">学習内容について</span>
+            <div style="font-size: 12px;"><ココにPDFリンク貼る></div>
+          </div>
+        </div>
+        <div class="stu_card_comment" style="margin-top: 5px;">
+          <p style="font-size: 12px;margin-bottom: 5px;">添付した資料の三行目が分かりません。そもそも二行目のthatは関係代名詞なのでしょうか。それとも同格のthatなのでしょうか。どうぞよろしくお願いします。</p>
+        </div>
+        <%= link_to "返信する", "teacher/reply", method: :get, style: "color: tomato;margin" %>
+      </div>
+    </div>
+
+
+
+
   <% @news.each do |e| %>
   <% if e.try(:subject) %>
   <div class="stu_card">
