質問投稿機能を実装

--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -82,7 +82,7 @@
     </div>
   <% else %>
     <div class="new_question_add">
-      <a href="students/new_questions" class="new_message_add_btn">
+      <a href="/questions/new" class="new_message_add_btn">
         <i class="far fa-hand-paper question_icon"></i>
         <!-- <i class="fas fa-question question_icon"></i> -->
       </a>
