questionsフォーム修正しました

--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -28,7 +28,7 @@
           <p style="font-size: 12px;margin-bottom: 5px;">添付した資料の三行目が分かりません。そもそも二行目のthatは関係代名詞なのでしょうか。それとも同格のthatなのでしょうか。どうぞよろしくお願いします。</p>
         </div>
       </div>
-      <div class="teacher_card" style="border-left:solid 1px;">
+      <div class="teacher_card" style="border-left:solid 1px; padding-right: 0px;padding-top: 0px;padding-bottom: 0px;">
         <div class="teacher_card_info">
           <div class="teacher_card_info_img">
             <p class="stu_card_info_img_self" style="font-size: 14px;">画像<br>なし</p>
@@ -40,7 +40,7 @@
             <p>2020年 09月 08日 01時 42分</p>
           </div>
         </div>
-        <div class="balloon_teacher">
+        <div class="balloon_teacher" style="margin-bottom: 10px;">
           <div class="teacher_card_comment">
             <p style="font-size: 11px;">To: Question君</p>
             <p>二行目のthatは同格のthatです。ideaの後にくるthatはほぼ100%で同格のthatです。覚えておきましょう。</p>
